[package]
name = "objectpool"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/objectpool"
homepage = "https://github.com/al8n/objectpool"
documentation = "https://docs.rs/objectpool"
description = "Yet another lock-free object pool"
license = "MIT/Apache-2.0"
rust-version = "1.56"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
std = ["crossbeam-queue/default"]

[dependencies]
crossbeam-queue = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
