[package]
name = "objectpool"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/objectpool"
homepage = "https://github.com/al8n/objectpool"
documentation = "https://docs.rs/objectpool"
description = "Yet another lock-free object pool, support no_std"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
keywords = ["atomic", "object-pool", "lockfree-object-pool", "non-blocking", "lock-free"]
categories = ["concurrency", "memory-management", "data-structures", "development-tools", "no-std"]
exclude = ["benchmark"]

[features]
default = ["std"]
# alloc = ["crossbeam-queue/alloc"]
# std = ["crossbeam-queue/default"]
alloc = []
std = ["concurrent-queue/default"]

[dependencies]
# crossbeam-queue = { version = "0.3", default-features = false }
concurrent-queue = { version = "2", default-features = false }

loom = { version = "0.7", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
