[package]
name = "bench-tools"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
path = "benches/bench.rs"
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
objectpool = { path = "../" }
sharded-slab = "0.1"
object-pool = "0.5"
criterion-plot = "0.5"
lockfree-object-pool = "0.1"